test_manifests/change-service-externalName.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service1
  name: service1
  namespace: example
spec:
  externalName: www.google.com
  type: ExternalName
