test_manifests/ingress-to-internal-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: example
spec:
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: internal-service
            port:
              number: 80
        path: /
        pathType: Prefix
